# crm_test_task

./: main.py  pyproject.toml  schemas.py
database/: engine.py  models.py
routes/: __init__.py  contacts.py  leads.py  operators.py  sources.py  stats.py
services/: services.py
