[project]
name = "lead-operator-crm"
version = "0.1.0"
description = ""
authors = [
    {name = "Etherial",email = "typicaluserinfinite@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "fastapi (>=0.122.0,<0.123.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
